# pico-midi-tdk

./: .gitignore  CMakeLists.txt  pico-midi-tdk.c  tusb_config.h  usb_descriptors.c
sketch_apr16a_copy_20260420141213/: sketch_apr16a_copy_20260420141213.ino
